--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -83,7 +83,11 @@
                             <a class="footer-bottom-socials-link" href="#"><img src="{% static 'img/pinterest.png' %}"
                                                                                 alt="pinterest"></a>
                         </article>
-                        <p class="footer-bottom-terms">Terms &amp;&nbsp;Conditions&nbsp;/ Privacy policy &amp;&nbsp;Cookies</p>
+                        <div class="footer-bottom-terms">
+                            <a class="footer-bottom-terms-link" href="#">Terms &amp;&nbsp;Conditions</a>
+                            <p>&nbsp;/&nbsp;</p>
+                            <a class="footer-bottom-terms-link" href="#">Privacy policy &amp;&nbsp;Cookies</a>
+                        </div>
                     </section>
                 </section>
             </div>
