--- a/mainapp/templates/mainapp/products_list.html
+++ b/mainapp/templates/mainapp/products_list.html
@@ -2,18 +2,19 @@
 {% load static %}
 
 {% block container %}
+    <header class="header header-overlap padding-site">
+        {% include 'mainapp/includes/inc_header.html' %}
+    </header>
     <section class="product-top padding-site">
-        <header class="header">
-            {% include 'mainapp/includes/inc_header.html' %}
-        </header>
+        <div></div>
         <h2 class="product-top-title">Our Products Range</h2>
     </section>
     <div class="products padding-site">
         {% include 'mainapp/includes/inc_products_nav.html' %}
-        <h2 class="product-list-title">Category: "{{ category.name|title }}"</h2>
+{#        <h2 class="product-list-title">Category: "{{ category.name|title }}"</h2>#}
         <section class="products-content">
 
-            {% for product in products %}
+            {% for product in products_list %}
                 <article class="product" style="background-image: url('/media/{{ product.image }}')">
                 <div class="product-in-box-content">
                     <a class="product-in-box-link" href="{% url 'product-details' product.pk %}">
@@ -26,6 +27,38 @@
             {% endfor %}
 
         </section>
+
+        {% if products_list|length > 12 %}
+            <section class="product-sync"><a href="#" class="product-sync-link"><i class="fas fa-sync-alt"></i></a></section>
+        {% endif %}
+
     </div>
+
+    {% if category.name == 'ALL' %}
+        <section class="promo-product">
+            <article class="promo-product-content">
+                <img class="promo-product-img" src="{% static 'img/promo-img1.jpg' %}" alt="promo-img1">
+                <div class="promo-text">
+                    <h4 class="promo-h4">exclusive</h4>
+                    <h2 class="promo-h2">Fishnet Chair</h2>
+                    <p class="promo-p">
+                        Seat and back with upholstery made of&nbsp;cold cure foam. Steel frame, available in&nbsp;matt
+                    </p>
+                    <a href="#" class="button">order&nbsp;us <img src="{% static 'img/arrow.svg' %}" alt="arrow"></a>
+                </div>
+            </article>
+            <article class="promo-product-content">
+                <img class="promo-product-img" src="{% static 'img/promo-img.jpg' %}" alt="promo-img1">
+                <div class="promo-text">
+                    <h4 class="promo-h4">exclusive</h4>
+                    <h2 class="promo-h2">Fishnet Chair</h2>
+                    <p class="promo-p">
+                        Seat and back with upholstery made of&nbsp;cold cure foam. Steel frame, available in&nbsp;matt
+                    </p>
+                    <a href="#" class="button">order&nbsp;us <img src="{% static 'img/arrow.svg' %}" alt="arrow"></a>
+                </div>
+            </article>
+        </section>
+    {% endif %}
 
 {% endblock %}
