--- a/adminapp/templates/adminapp/products.html
+++ b/adminapp/templates/adminapp/products.html
@@ -13,7 +13,7 @@
                 {% if not object.is_active %}
                     not_active
                 {% endif %}">
-                <img class="admin-object-img" src="/media/{{ object.image|default:'products_images/default.jpg' }}" alt="{{ object.name }}">
+                <div class="admin-object-img" style="background-image: url('/media/{{ object.image|default:'products_images/default.jpg' }}')"></div>
                 <div class="admin-text-about">
                     <h4 class="admin-object-name">
                         {{ object.name|title }}
