--- a/adminapp/templates/adminapp/users.html
+++ b/adminapp/templates/adminapp/users.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="users_list">
         <div class="admin-new-item">
-            <h4 class="admin-item-name">Пользователи</b></h4>
+            <h4 class="admin-item-name">Пользователи</h4>
             <a class="admin-new-item-button" href= {% url 'admin_custom:user_create' %}>Создать нового пользователя</a>
         </div>
 
@@ -12,8 +12,8 @@
             <div class="admin-object-record {% if not object.is_active %}not_active{% endif %}">
                 <img class="admin-object-img" src="/media/{{ object.avatar|default:'users_avatars/default.jpg' }}" alt="{{ object.username }}">
                 <div class="admin-text-about">
-                    <p>Username:&nbsp;{{ object.username }}</p>
-                    <p>Name:&nbsp;
+                    <p><b>Username:</b>&nbsp;{{ object.username }}</p>
+                    <p><b>Name:</b>&nbsp;
                         {% if object.first_name %}
                             {{ object.first_name|title }}
                             {% if object.last_name %}
@@ -23,9 +23,9 @@
                                 None
                         {% endif %}
                     </p>
-                    <p>age:&nbsp;{{ object.age }}&nbsp;лет</p>
-                    <p>email:&nbsp;{{ object.email }}</p>
-                    <p>logged:&nbsp;{{ object.last_login }}</p>
+                    <p><b>age:</b>&nbsp;{{ object.age }}&nbsp;лет</p>
+                    <p><b>email:</b>&nbsp;{{ object.email }}</p>
+                    <p><b>logged:</b>&nbsp;{{ object.last_login }}</p>
                 </div>
                 <div class="user_role">
                     {% if object.is_superuser %}
